k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metanoia
  labels:
    name: metanoia
    app: metanoia-erp
