k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metanoia-app
  namespace: metanoia
  labels:
    app: metanoia-app
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: metanoia-app
